plugins {
    id 'java'
    id 'java-library'
    id 'checkstyle'
    id 'jacoco'
    id 'org.graalvm.buildtools.native' version '1.1.10' apply false
    id 'org.springframework.boot' version '4.1.1' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'ru.oldzoomer'
    version = '0.0.1-SNAPSHOT'
    
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

subprojects {
    if (project.path.startsWith(':lib')) {
        apply plugin: 'java-library'
    } else {
        apply plugin: 'java'
        apply plugin: 'org.graalvm.buildtools.native'
    }

    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'checkstyle'
    apply plugin: 'jacoco'

    if (project.path.startsWith(':lib')) {
        bootJar {
            enabled = false
        }

        jar {
            enabled = true
        }
    } else {
        //
        // GraalVM Native Image configuration and optimizations
        //
        graalvmNative {
            metadataRepository {
                enabled = true
            }

            agent {
                // Use "standard" mode, not "conditional". In conditional mode, each entry gets a
                // "condition: typeReached: <caller>" attached. When tests are the callers, the
                // condition becomes "typeReached: PluginLoaderIntegrationTest" — a class that
                // doesn't exist in the production binary. The condition is never true, so the
                // entries are inactive and Class.forName() fails at runtime.
                //
                // Standard mode records unconditional entries. The reachability metadata
                // repository (enabled above) already handles Spring/library internals, so any
                // extra entries captured here are deduplicated at build time.
                defaultMode = "standard"
            }

            binaries {
                main {
                    // Production-optimised defaults
                    buildArgs.add('-H:+ReportExceptionStackTraces')
                    buildArgs.add('-Os')
                    buildArgs.add('-H:+StripDebugInfo')
                    buildArgs.add('--no-fallback')

                    // PGO bootstrap property  (set -Pbootstrap for instrumented build)
                    if (project.hasProperty('bootstrap')) {
                        buildArgs.add('--pgo-instrument')
                    }
                    // PGO optimisation property  (set -Ppgo=/path/to/default.iprof)
                    if (project.hasProperty('pgo')) {
                        buildArgs.add("--pgo=${project.property('pgo')}")
                    }

                    // Quick build for local development  (–no-fallback, –parallelism)
                    if (project.hasProperty('quickBuild')) {
                        buildArgs.add('-Ob')
                        buildArgs.add('--parallelism=2')
                    }

                    resources.autodetect()
                }
            }
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    test {
        finalizedBy jacocoTestReport // report is always generated after tests run
    }

    jacocoTestReport {
        dependsOn test // tests are required to run before generating the report
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    ext {
        mapstructVersion = '1.6.3'
        therapiVersion = '0.15.0'
        nodelistjVersion = '2.0.1'
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-configuration-processor'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    checkstyle {
        sourceSets = [sourceSets.main]
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add("-parameters")
    }

    test {
        useJUnitPlatform()
    }
}
